// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🔧 Foundation/Hooks/useTheme Theme Value 1`] = `
<div
  className="MuiBox-root MuiBox-root-17"
>
  <pre>
    {
  "breakpoints": {
    "keys": [
      "xs",
      "sm",
      "md",
      "lg",
      "xl"
    ],
    "values": {
      "xs": 0,
      "sm": 641,
      "md": 960,
      "lg": 1280,
      "xl": 1920
    }
  },
  "direction": "ltr",
  "mixins": {
    "toolbar": {
      "minHeight": 56,
      "@media (min-width:0px) and (orientation: landscape)": {
        "minHeight": 48
      },
      "@media (min-width:641px)": {
        "minHeight": 64
      }
    }
  },
  "overrides": {},
  "palette": {
    "common": {
      "black": "#000",
      "white": "#fff"
    },
    "type": "light",
    "primary": {
      "main": "#066FAC",
      "light": "rgb(55, 139, 188)",
      "dark": "rgb(4, 77, 120)",
      "contrastText": "#fff"
    },
    "secondary": {
      "main": "#FF8800",
      "light": "rgb(255, 159, 51)",
      "dark": "rgb(178, 95, 0)",
      "contrastText": "rgba(0, 0, 0, 0.87)"
    },
    "error": {
      "main": "#D63E39",
      "light": "rgb(222, 100, 96)",
      "dark": "rgb(149, 43, 39)",
      "contrastText": "#fff"
    },
    "warning": {
      "b01": "#FFF7EB",
      "b02": "#FFE7C1",
      "b03": "#F6AD16",
      "f01": "#F6AD16",
      "f02": "#896219",
      "f11": "#F6AD16",
      "main": "#F6AD16",
      "light": "rgb(247, 189, 68)",
      "dark": "rgb(172, 121, 15)",
      "contrastText": "rgba(0, 0, 0, 0.87)"
    },
    "info": {
      "main": "#666666",
      "light": "rgb(132, 132, 132)",
      "dark": "rgb(71, 71, 71)",
      "contrastText": "#fff"
    },
    "success": {
      "b01": "#F0FCEF",
      "b02": "#CEF4CE",
      "b03": "#3C9949",
      "b04": "#368541",
      "b05": "#3C9949",
      "f01": "#CEF4CE",
      "f02": "#32773B",
      "f11": "#46BE59",
      "main": "#368541",
      "light": "rgb(94, 157, 103)",
      "dark": "rgb(37, 93, 45)",
      "contrastText": "#fff"
    },
    "grey": {
      "50": "#fafafa",
      "100": "#f5f5f5",
      "200": "#eeeeee",
      "300": "#e0e0e0",
      "400": "#bdbdbd",
      "500": "#9e9e9e",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
      "A100": "#d5d5d5",
      "A200": "#aaaaaa",
      "A400": "#303030",
      "A700": "#616161"
    },
    "contrastThreshold": 3,
    "tonalOffset": 0.2,
    "text": {
      "primary": "rgba(0, 0, 0, 0.87)",
      "secondary": "rgba(0, 0, 0, 0.54)",
      "disabled": "rgba(0, 0, 0, 0.38)",
      "hint": "rgba(0, 0, 0, 0.38)"
    },
    "divider": "rgba(0, 0, 0, 0.12)",
    "background": {
      "paper": "#fff",
      "default": "#fafafa"
    },
    "action": {
      "active": "rgba(0, 0, 0, 0.54)",
      "hover": "rgba(0, 0, 0, 0.04)",
      "hoverOpacity": 0.04,
      "selected": "rgba(0, 0, 0, 0.08)",
      "selectedOpacity": 0.08,
      "disabled": "rgba(0, 0, 0, 0.26)",
      "disabledBackground": "rgba(0, 0, 0, 0.12)",
      "disabledOpacity": 0.38,
      "focus": "rgba(0, 0, 0, 0.12)",
      "focusOpacity": 0.12,
      "activatedOpacity": 0.12,
      "grayDark": "#494949",
      "grayLight": "#666666",
      "primary": "#066FAC"
    },
    "avatar": {
      "ash": "#666666",
      "blueberry": "#5A5ABF",
      "brass": "#8E6B2B",
      "global": "#509AC4",
      "gold": "#7A7000",
      "lake": "#1A70C1",
      "oasis": "#04549F",
      "pear": "#3C7E44",
      "persimmon": "#A14B00",
      "sage": "#047C68",
      "tomato": "#C93637"
    },
    "content": {
      "brand": "#066FAC"
    },
    "danger": {
      "b01": "#FFF7F5",
      "b02": "#FFE5E0",
      "b03": "#E6413C",
      "b04": "#D63E39",
      "f01": "#FFE5E0",
      "f02": "#BE3933",
      "f11": "#F88878"
    },
    "dialHeader": {
      "avatarBg": "#FFFFFF",
      "avatarIcon": "#066FAC",
      "bg": "#066FAC",
      "focusBorder": "#FFFFFF",
      "icon": "#FFFFFF",
      "text": "#FFFFFF",
      "textHint": "rgba(255,255,255,0.88)"
    },
    "disabled": {
      "b01": "#E5E5E5",
      "f01": "#939393",
      "f02": "#C7C7C7"
    },
    "header": {
      "bgLeft": "#066FAC",
      "bgOverlay": "rgba(255,255,255,0.16)",
      "bgOverlayDisabled": "rgba(255,255,255,0.08)",
      "bgRight": "#509AC4",
      "border": "transparent",
      "divider": "rgba(0,0,0,0.12)",
      "fabBg": "#FFFFFF",
      "fabIcon": "#121212",
      "focusBorder": "#FFFFFF",
      "icon": "#FFFFFF",
      "iconDisabled": "rgba(255,255,255,0.32)",
      "text": "#FFFFFF",
      "textHint": "rgba(255,255,255,0.48)"
    },
    "highContrast": "transparent",
    "highlight": {
      "b01": "#FF8800",
      "b02": "#FFDFB1",
      "b03": "#FF8800",
      "f01": "#121212",
      "f02": "#FF8800"
    },
    "informative": {
      "b01": "#F6F9FC",
      "f01": "#E3EBF4",
      "f02": "#066FAC"
    },
    "interactive": {
      "b01": "#E6F2F8",
      "b02": "#066FAC",
      "f01": "#066FAC"
    },
    "label": {
      "black02": "#121212",
      "blue01": "#066FAC",
      "blue02": "#066FAC",
      "green01": "#3C9949",
      "green02": "#32773B",
      "orange01": "#CD6E0D",
      "orange02": "#A15600",
      "purple01": "#8A77E3",
      "purple02": "#6C5DAF",
      "red01": "#E6413C",
      "red02": "#BE3933",
      "teal01": "#3093A4",
      "teal02": "#2B727F",
      "yellow01": "#B17D1A",
      "yellow02": "#896219"
    },
    "nav": {
      "b01": "#FFFFFF",
      "b02": "#F9F9F9",
      "bookmark": "#066FAC",
      "ctlDefault": "#939393",
      "ctlSelected": "#066FAC",
      "f01": "#757575",
      "f02": "#666666",
      "f03": "#494949",
      "f04": "#121212",
      "iconDefault": "#121212",
      "iconSelected": "#066FAC",
      "line": "#E5E5E5",
      "mention": "#FF8800",
      "menuBg": "#066FAC",
      "menuText": "#FFFFFF"
    },
    "neutral": {
      "b01": "#FFFFFF",
      "b02": "#F9F9F9",
      "b03": "#F3F3F3",
      "b04": "#666666",
      "b05": "#494949",
      "b06": "#000000",
      "elevation": "#FFFFFF",
      "f01": "#FFFFFF",
      "f02": "#939393",
      "f03": "#757575",
      "f04": "#666666",
      "f05": "#494949",
      "f06": "#121212",
      "f07": "#121212",
      "f11": "#FFFFFF",
      "l01": "#FFFFFF",
      "l02": "#E5E5E5",
      "l03": "#C7C7C7",
      "l04": "#666666",
      "transparent": "transparent"
    },
    "presence": {
      "available": "#3C9949",
      "busy": "#E6413C",
      "invisible": "#939393"
    },
    "subAction": "#066FAC",
    "tab": {
      "default": "#121212",
      "selected": "#066FAC"
    },
    "umi": {
      "bg": "#666666",
      "mentioned": "#FF8800",
      "text": "#FFFFFF"
    },
    "vDanger": {
      "f01": "#DD6057"
    },
    "vDisabled": {
      "f01": "#54565E"
    },
    "vNeutral": {
      "b01": "#1e2027",
      "b02": "#282A32",
      "b03": "#30323A",
      "b04": "#383A43",
      "f01": "#FFFFFF"
    }
  },
  "props": {},
  "shadows": [
    "none",
    "0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12)",
    "0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12)",
    "0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)"
  ],
  "typography": {
    "htmlFontSize": 16,
    "fontFamily": "Lato, Helvetica, Arial, sans-serif",
    "fontSize": 14,
    "fontWeightLight": 300,
    "fontWeightRegular": 400,
    "fontWeightMedium": 500,
    "fontWeightBold": 700,
    "h1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 300,
      "fontSize": "6rem",
      "lineHeight": 1.167
    },
    "h2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 300,
      "fontSize": "3.75rem",
      "lineHeight": 1.2
    },
    "h3": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "3rem",
      "lineHeight": 1.167
    },
    "h4": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "2.125rem",
      "lineHeight": 1.235
    },
    "h5": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "1.5rem",
      "lineHeight": 1.334
    },
    "h6": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 500,
      "fontSize": "1.25rem",
      "lineHeight": 1.6
    },
    "subtitle1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "1rem",
      "lineHeight": 1.75
    },
    "subtitle2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 500,
      "fontSize": "0.875rem",
      "lineHeight": 1.57
    },
    "body1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.875rem",
      "lineHeight": "20px"
    },
    "body2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 700,
      "fontSize": "0.875rem",
      "lineHeight": "20px"
    },
    "button": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 700,
      "fontSize": "0.9375rem",
      "lineHeight": "20px",
      "textTransform": "none"
    },
    "caption": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.75rem",
      "lineHeight": 1.66
    },
    "overline": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.75rem",
      "lineHeight": 2.66,
      "textTransform": "uppercase"
    },
    "caption1": {
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "lineHeight": "16px"
    },
    "caption2": {
      "fontSize": "0.75rem",
      "fontWeight": 700,
      "lineHeight": "16px"
    },
    "codeFontFamily": "Courier",
    "display1": {
      "fontSize": "2.125rem",
      "fontWeight": 400,
      "lineHeight": "40px"
    },
    "display2": {
      "fontSize": "2.8125rem",
      "fontWeight": 400,
      "lineHeight": "56px"
    },
    "display3": {
      "fontSize": "3.5rem",
      "fontWeight": 700,
      "lineHeight": "72px"
    },
    "display4": {
      "fontSize": "6rem",
      "fontWeight": 700,
      "lineHeight": "112px"
    },
    "headline1": {
      "fontSize": "1.5rem",
      "fontWeight": 400,
      "lineHeight": "32px"
    },
    "headline2": {
      "fontSize": "1.5rem",
      "fontWeight": 700,
      "lineHeight": "32px"
    },
    "subheading1": {
      "fontSize": "1rem",
      "fontWeight": 400,
      "lineHeight": "24px"
    },
    "subheading2": {
      "fontSize": "1rem",
      "fontWeight": 700,
      "lineHeight": "24px"
    },
    "title1": {
      "fontSize": "1.25rem",
      "fontWeight": 400,
      "lineHeight": "28px"
    },
    "title2": {
      "fontSize": "1.25rem",
      "fontWeight": 700,
      "lineHeight": "28px"
    }
  },
  "shape": {
    "borderRadius": 4
  },
  "transitions": {
    "easing": {
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)"
    },
    "duration": {
      "shortest": 150,
      "shorter": 200,
      "short": 250,
      "standard": 300,
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195
    }
  },
  "zIndex": {
    "mobileStepper": 1000,
    "speedDial": 1050,
    "appBar": 1100,
    "drawer": 1200,
    "modal": 1300,
    "snackbar": 1400,
    "tooltip": 1500
  },
  "opacity": {
    "12": 0.12,
    "16": 0.16,
    "24": 0.24,
    "32": 0.32,
    "40": 0.4,
    "48": 0.48,
    "56": 0.56,
    "64": 0.64,
    "72": 0.72,
    "80": 0.8,
    "88": 0.88,
    "96": 0.96,
    "08": 0.08
  },
  "radius": {
    "circle": "50%",
    "lg": "4px",
    "md": "3px",
    "round": "100vw",
    "sm": "2px",
    "xl": "8px",
    "xxl": "16px",
    "zero": "0px"
  }
}
  </pre>
</div>
`;

exports[`Storyshots 🔧 Foundation/Hooks/useTheme useTheme 1`] = `
Array [
  .c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

<h5
    className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="headline1"
  >
    Current Theme
  </h5>,
  <div
    className="MuiBox-root MuiBox-root-18"
  >
    <pre>
      {
  "breakpoints": {
    "keys": [
      "xs",
      "sm",
      "md",
      "lg",
      "xl"
    ],
    "values": {
      "xs": 0,
      "sm": 641,
      "md": 960,
      "lg": 1280,
      "xl": 1920
    }
  },
  "direction": "ltr",
  "mixins": {
    "toolbar": {
      "minHeight": 56,
      "@media (min-width:0px) and (orientation: landscape)": {
        "minHeight": 48
      },
      "@media (min-width:641px)": {
        "minHeight": 64
      }
    }
  },
  "overrides": {},
  "palette": {
    "common": {
      "black": "#000",
      "white": "#fff"
    },
    "type": "light",
    "primary": {
      "main": "#066FAC",
      "light": "rgb(55, 139, 188)",
      "dark": "rgb(4, 77, 120)",
      "contrastText": "#fff"
    },
    "secondary": {
      "main": "#FF8800",
      "light": "rgb(255, 159, 51)",
      "dark": "rgb(178, 95, 0)",
      "contrastText": "rgba(0, 0, 0, 0.87)"
    },
    "error": {
      "main": "#D63E39",
      "light": "rgb(222, 100, 96)",
      "dark": "rgb(149, 43, 39)",
      "contrastText": "#fff"
    },
    "warning": {
      "b01": "#FFF7EB",
      "b02": "#FFE7C1",
      "b03": "#F6AD16",
      "f01": "#F6AD16",
      "f02": "#896219",
      "f11": "#F6AD16",
      "main": "#F6AD16",
      "light": "rgb(247, 189, 68)",
      "dark": "rgb(172, 121, 15)",
      "contrastText": "rgba(0, 0, 0, 0.87)"
    },
    "info": {
      "main": "#666666",
      "light": "rgb(132, 132, 132)",
      "dark": "rgb(71, 71, 71)",
      "contrastText": "#fff"
    },
    "success": {
      "b01": "#F0FCEF",
      "b02": "#CEF4CE",
      "b03": "#3C9949",
      "b04": "#368541",
      "b05": "#3C9949",
      "f01": "#CEF4CE",
      "f02": "#32773B",
      "f11": "#46BE59",
      "main": "#368541",
      "light": "rgb(94, 157, 103)",
      "dark": "rgb(37, 93, 45)",
      "contrastText": "#fff"
    },
    "grey": {
      "50": "#fafafa",
      "100": "#f5f5f5",
      "200": "#eeeeee",
      "300": "#e0e0e0",
      "400": "#bdbdbd",
      "500": "#9e9e9e",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
      "A100": "#d5d5d5",
      "A200": "#aaaaaa",
      "A400": "#303030",
      "A700": "#616161"
    },
    "contrastThreshold": 3,
    "tonalOffset": 0.2,
    "text": {
      "primary": "rgba(0, 0, 0, 0.87)",
      "secondary": "rgba(0, 0, 0, 0.54)",
      "disabled": "rgba(0, 0, 0, 0.38)",
      "hint": "rgba(0, 0, 0, 0.38)"
    },
    "divider": "rgba(0, 0, 0, 0.12)",
    "background": {
      "paper": "#fff",
      "default": "#fafafa"
    },
    "action": {
      "active": "rgba(0, 0, 0, 0.54)",
      "hover": "rgba(0, 0, 0, 0.04)",
      "hoverOpacity": 0.04,
      "selected": "rgba(0, 0, 0, 0.08)",
      "selectedOpacity": 0.08,
      "disabled": "rgba(0, 0, 0, 0.26)",
      "disabledBackground": "rgba(0, 0, 0, 0.12)",
      "disabledOpacity": 0.38,
      "focus": "rgba(0, 0, 0, 0.12)",
      "focusOpacity": 0.12,
      "activatedOpacity": 0.12,
      "grayDark": "#494949",
      "grayLight": "#666666",
      "primary": "#066FAC"
    },
    "avatar": {
      "ash": "#666666",
      "blueberry": "#5A5ABF",
      "brass": "#8E6B2B",
      "global": "#509AC4",
      "gold": "#7A7000",
      "lake": "#1A70C1",
      "oasis": "#04549F",
      "pear": "#3C7E44",
      "persimmon": "#A14B00",
      "sage": "#047C68",
      "tomato": "#C93637"
    },
    "content": {
      "brand": "#066FAC"
    },
    "danger": {
      "b01": "#FFF7F5",
      "b02": "#FFE5E0",
      "b03": "#E6413C",
      "b04": "#D63E39",
      "f01": "#FFE5E0",
      "f02": "#BE3933",
      "f11": "#F88878"
    },
    "dialHeader": {
      "avatarBg": "#FFFFFF",
      "avatarIcon": "#066FAC",
      "bg": "#066FAC",
      "focusBorder": "#FFFFFF",
      "icon": "#FFFFFF",
      "text": "#FFFFFF",
      "textHint": "rgba(255,255,255,0.88)"
    },
    "disabled": {
      "b01": "#E5E5E5",
      "f01": "#939393",
      "f02": "#C7C7C7"
    },
    "header": {
      "bgLeft": "#066FAC",
      "bgOverlay": "rgba(255,255,255,0.16)",
      "bgOverlayDisabled": "rgba(255,255,255,0.08)",
      "bgRight": "#509AC4",
      "border": "transparent",
      "divider": "rgba(0,0,0,0.12)",
      "fabBg": "#FFFFFF",
      "fabIcon": "#121212",
      "focusBorder": "#FFFFFF",
      "icon": "#FFFFFF",
      "iconDisabled": "rgba(255,255,255,0.32)",
      "text": "#FFFFFF",
      "textHint": "rgba(255,255,255,0.48)"
    },
    "highContrast": "transparent",
    "highlight": {
      "b01": "#FF8800",
      "b02": "#FFDFB1",
      "b03": "#FF8800",
      "f01": "#121212",
      "f02": "#FF8800"
    },
    "informative": {
      "b01": "#F6F9FC",
      "f01": "#E3EBF4",
      "f02": "#066FAC"
    },
    "interactive": {
      "b01": "#E6F2F8",
      "b02": "#066FAC",
      "f01": "#066FAC"
    },
    "label": {
      "black02": "#121212",
      "blue01": "#066FAC",
      "blue02": "#066FAC",
      "green01": "#3C9949",
      "green02": "#32773B",
      "orange01": "#CD6E0D",
      "orange02": "#A15600",
      "purple01": "#8A77E3",
      "purple02": "#6C5DAF",
      "red01": "#E6413C",
      "red02": "#BE3933",
      "teal01": "#3093A4",
      "teal02": "#2B727F",
      "yellow01": "#B17D1A",
      "yellow02": "#896219"
    },
    "nav": {
      "b01": "#FFFFFF",
      "b02": "#F9F9F9",
      "bookmark": "#066FAC",
      "ctlDefault": "#939393",
      "ctlSelected": "#066FAC",
      "f01": "#757575",
      "f02": "#666666",
      "f03": "#494949",
      "f04": "#121212",
      "iconDefault": "#121212",
      "iconSelected": "#066FAC",
      "line": "#E5E5E5",
      "mention": "#FF8800",
      "menuBg": "#066FAC",
      "menuText": "#FFFFFF"
    },
    "neutral": {
      "b01": "#FFFFFF",
      "b02": "#F9F9F9",
      "b03": "#F3F3F3",
      "b04": "#666666",
      "b05": "#494949",
      "b06": "#000000",
      "elevation": "#FFFFFF",
      "f01": "#FFFFFF",
      "f02": "#939393",
      "f03": "#757575",
      "f04": "#666666",
      "f05": "#494949",
      "f06": "#121212",
      "f07": "#121212",
      "f11": "#FFFFFF",
      "l01": "#FFFFFF",
      "l02": "#E5E5E5",
      "l03": "#C7C7C7",
      "l04": "#666666",
      "transparent": "transparent"
    },
    "presence": {
      "available": "#3C9949",
      "busy": "#E6413C",
      "invisible": "#939393"
    },
    "subAction": "#066FAC",
    "tab": {
      "default": "#121212",
      "selected": "#066FAC"
    },
    "umi": {
      "bg": "#666666",
      "mentioned": "#FF8800",
      "text": "#FFFFFF"
    },
    "vDanger": {
      "f01": "#DD6057"
    },
    "vDisabled": {
      "f01": "#54565E"
    },
    "vNeutral": {
      "b01": "#1e2027",
      "b02": "#282A32",
      "b03": "#30323A",
      "b04": "#383A43",
      "f01": "#FFFFFF"
    }
  },
  "props": {},
  "shadows": [
    "none",
    "0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12)",
    "0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12)",
    "0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)"
  ],
  "typography": {
    "htmlFontSize": 16,
    "fontFamily": "Lato, Helvetica, Arial, sans-serif",
    "fontSize": 14,
    "fontWeightLight": 300,
    "fontWeightRegular": 400,
    "fontWeightMedium": 500,
    "fontWeightBold": 700,
    "h1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 300,
      "fontSize": "6rem",
      "lineHeight": 1.167
    },
    "h2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 300,
      "fontSize": "3.75rem",
      "lineHeight": 1.2
    },
    "h3": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "3rem",
      "lineHeight": 1.167
    },
    "h4": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "2.125rem",
      "lineHeight": 1.235
    },
    "h5": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "1.5rem",
      "lineHeight": 1.334
    },
    "h6": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 500,
      "fontSize": "1.25rem",
      "lineHeight": 1.6
    },
    "subtitle1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "1rem",
      "lineHeight": 1.75
    },
    "subtitle2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 500,
      "fontSize": "0.875rem",
      "lineHeight": 1.57
    },
    "body1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.875rem",
      "lineHeight": "20px"
    },
    "body2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 700,
      "fontSize": "0.875rem",
      "lineHeight": "20px"
    },
    "button": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 700,
      "fontSize": "0.9375rem",
      "lineHeight": "20px",
      "textTransform": "none"
    },
    "caption": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.75rem",
      "lineHeight": 1.66
    },
    "overline": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.75rem",
      "lineHeight": 2.66,
      "textTransform": "uppercase"
    },
    "caption1": {
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "lineHeight": "16px"
    },
    "caption2": {
      "fontSize": "0.75rem",
      "fontWeight": 700,
      "lineHeight": "16px"
    },
    "codeFontFamily": "Courier",
    "display1": {
      "fontSize": "2.125rem",
      "fontWeight": 400,
      "lineHeight": "40px"
    },
    "display2": {
      "fontSize": "2.8125rem",
      "fontWeight": 400,
      "lineHeight": "56px"
    },
    "display3": {
      "fontSize": "3.5rem",
      "fontWeight": 700,
      "lineHeight": "72px"
    },
    "display4": {
      "fontSize": "6rem",
      "fontWeight": 700,
      "lineHeight": "112px"
    },
    "headline1": {
      "fontSize": "1.5rem",
      "fontWeight": 400,
      "lineHeight": "32px"
    },
    "headline2": {
      "fontSize": "1.5rem",
      "fontWeight": 700,
      "lineHeight": "32px"
    },
    "subheading1": {
      "fontSize": "1rem",
      "fontWeight": 400,
      "lineHeight": "24px"
    },
    "subheading2": {
      "fontSize": "1rem",
      "fontWeight": 700,
      "lineHeight": "24px"
    },
    "title1": {
      "fontSize": "1.25rem",
      "fontWeight": 400,
      "lineHeight": "28px"
    },
    "title2": {
      "fontSize": "1.25rem",
      "fontWeight": 700,
      "lineHeight": "28px"
    }
  },
  "shape": {
    "borderRadius": 4
  },
  "transitions": {
    "easing": {
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)"
    },
    "duration": {
      "shortest": 150,
      "shorter": 200,
      "short": 250,
      "standard": 300,
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195
    }
  },
  "zIndex": {
    "mobileStepper": 1000,
    "speedDial": 1050,
    "appBar": 1100,
    "drawer": 1200,
    "modal": 1300,
    "snackbar": 1400,
    "tooltip": 1500
  },
  "opacity": {
    "12": 0.12,
    "16": 0.16,
    "24": 0.24,
    "32": 0.32,
    "40": 0.4,
    "48": 0.48,
    "56": 0.56,
    "64": 0.64,
    "72": 0.72,
    "80": 0.8,
    "88": 0.88,
    "96": 0.96,
    "08": 0.08
  },
  "radius": {
    "circle": "50%",
    "lg": "4px",
    "md": "3px",
    "round": "100vw",
    "sm": "2px",
    "xl": "8px",
    "xxl": "16px",
    "zero": "0px"
  }
}
    </pre>
  </div>,
  .c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

<h5
    className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="headline1"
  >
    Dark Theme
  </h5>,
  <div
    className="MuiBox-root-19 MuiBox-root-20"
  >
    <pre>
      {
  "breakpoints": {
    "keys": [
      "xs",
      "sm",
      "md",
      "lg",
      "xl"
    ],
    "values": {
      "lg": 1280,
      "md": 960,
      "sm": 641,
      "xl": 1920,
      "xs": 0
    }
  },
  "direction": "ltr",
  "mixins": {
    "toolbar": {
      "minHeight": 56,
      "@media (min-width:0px) and (orientation: landscape)": {
        "minHeight": 48
      },
      "@media (min-width:641px)": {
        "minHeight": 64
      }
    }
  },
  "overrides": {
    "MuiPaper": {
      "root": {
        "backgroundColor": "#282A32",
        "color": "#FFFFFF"
      }
    }
  },
  "palette": {
    "common": {
      "black": "#000",
      "white": "#fff"
    },
    "type": "dark",
    "primary": {
      "main": "#356AFD",
      "light": "rgb(93, 135, 253)",
      "dark": "rgb(37, 74, 177)",
      "contrastText": "#fff"
    },
    "secondary": {
      "main": "#884C12",
      "light": "rgb(159, 111, 65)",
      "dark": "rgb(95, 53, 12)",
      "contrastText": "#fff"
    },
    "error": {
      "main": "#DD6057",
      "light": "rgb(227, 127, 120)",
      "dark": "rgb(154, 67, 60)",
      "contrastText": "#fff"
    },
    "warning": {
      "b01": "#2B2416",
      "b02": "#373D1B",
      "b03": "#D99F26",
      "f01": "#D99F26",
      "f02": "#D99F26",
      "f11": "#D99F26",
      "main": "#74561D",
      "light": "rgb(143, 119, 74)",
      "dark": "rgb(81, 60, 20)",
      "contrastText": "#fff"
    },
    "info": {
      "main": "#A0A2A9",
      "light": "rgb(179, 180, 186)",
      "dark": "rgb(112, 113, 118)",
      "contrastText": "rgba(0, 0, 0, 0.87)"
    },
    "success": {
      "b01": "#1C281B",
      "b02": "#223221",
      "b03": "#368440",
      "b04": "#368440",
      "b05": "#A0A2A9",
      "f01": "#223221",
      "f02": "#72B375",
      "f11": "#72B375",
      "main": "#3D9A4A",
      "light": "rgb(99, 174, 110)",
      "dark": "rgb(42, 107, 51)",
      "contrastText": "#fff"
    },
    "grey": {
      "50": "#fafafa",
      "100": "#f5f5f5",
      "200": "#eeeeee",
      "300": "#e0e0e0",
      "400": "#bdbdbd",
      "500": "#9e9e9e",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
      "A100": "#d5d5d5",
      "A200": "#aaaaaa",
      "A400": "#303030",
      "A700": "#616161"
    },
    "contrastThreshold": 3,
    "tonalOffset": 0.2,
    "text": {
      "primary": "#fff",
      "secondary": "rgba(255, 255, 255, 0.7)",
      "disabled": "rgba(255, 255, 255, 0.5)",
      "hint": "rgba(255, 255, 255, 0.5)",
      "icon": "rgba(255, 255, 255, 0.5)"
    },
    "divider": "rgba(255, 255, 255, 0.12)",
    "background": {
      "paper": "#424242",
      "default": "#303030"
    },
    "action": {
      "active": "#fff",
      "hover": "rgba(255, 255, 255, 0.08)",
      "hoverOpacity": 0.08,
      "selected": "rgba(255, 255, 255, 0.16)",
      "selectedOpacity": 0.16,
      "disabled": "rgba(255, 255, 255, 0.3)",
      "disabledBackground": "rgba(255, 255, 255, 0.12)",
      "disabledOpacity": 0.38,
      "focus": "rgba(255, 255, 255, 0.12)",
      "focusOpacity": 0.12,
      "activatedOpacity": 0.24,
      "grayDark": "#FFFFFF",
      "grayLight": "#A0A2A9",
      "primary": "#729AFF"
    },
    "avatar": {
      "ash": "#666666",
      "blueberry": "#5A5ABF",
      "brass": "#8E6B2B",
      "global": "#6990FD",
      "gold": "#7A7000",
      "lake": "#1A70C1",
      "oasis": "#04549F",
      "pear": "#3C7E44",
      "persimmon": "#A14B00",
      "sage": "#047C68",
      "tomato": "#C93637"
    },
    "content": {
      "brand": "#729AFF"
    },
    "danger": {
      "b01": "#391D19",
      "b02": "#49241F",
      "b03": "#D53C32",
      "b04": "#D53C32",
      "f01": "#49241F",
      "f02": "#E68B85",
      "f11": "#E68B85"
    },
    "dialHeader": {
      "avatarBg": "#6990FD",
      "avatarIcon": "#FFFFFF",
      "bg": "#383A43",
      "focusBorder": "#729AFF",
      "icon": "#FFFFFF",
      "text": "#FFFFFF",
      "textHint": "#898B94"
    },
    "disabled": {
      "b01": "#44464E",
      "f01": "#72747E",
      "f02": "#54565E"
    },
    "header": {
      "bgLeft": "#30323A",
      "bgOverlay": "rgba(137,139,148,0.16)",
      "bgOverlayDisabled": "rgba(137,139,148,0.08)",
      "bgRight": "#30323A",
      "border": "transparent",
      "divider": "rgba(0,0,0,0.12)",
      "fabBg": "#282A32",
      "fabIcon": "#FFFFFF",
      "focusBorder": "#FFFFFF",
      "icon": "#FFFFFF",
      "iconDisabled": "rgba(255,255,255,0.32)",
      "text": "#FFFFFF",
      "textHint": "#898B94"
    },
    "highContrast": "transparent",
    "highlight": {
      "b01": "#FFFFFF",
      "b02": "#3E2A19",
      "b03": "#884C12",
      "f01": "#FF8800",
      "f02": "#FF8800"
    },
    "informative": {
      "b01": "#282A32",
      "f01": "#222E49",
      "f02": "#729AFF"
    },
    "interactive": {
      "b01": "#29334C",
      "b02": "#356AFD",
      "f01": "#729AFF"
    },
    "label": {
      "black02": "#FFFFFF",
      "blue01": "#729AFF",
      "blue02": "#729AFF",
      "green01": "#72B375",
      "green02": "#72B375",
      "orange01": "#FF8800",
      "orange02": "#FF8800",
      "purple01": "#A89CD6",
      "purple02": "#A89CD6",
      "red01": "#E68B85",
      "red02": "#E68B85",
      "teal01": "#71ADBA",
      "teal02": "#71ADBA",
      "yellow01": "#D99F26",
      "yellow02": "#D99F26"
    },
    "nav": {
      "b01": "#1e2027",
      "b02": "#282A32",
      "bookmark": "#729AFF",
      "ctlDefault": "#72747E",
      "ctlSelected": "#729AFF",
      "f01": "#898B94",
      "f02": "#A0A2A9",
      "f03": "#BCBDC2",
      "f04": "#FFFFFF",
      "iconDefault": "#FFFFFF",
      "iconSelected": "#729AFF",
      "line": "#383A43",
      "mention": "#FF8800",
      "menuBg": "#356AFD",
      "menuText": "#FFFFFF"
    },
    "neutral": {
      "b01": "#1e2027",
      "b02": "#30323A",
      "b03": "#383A43",
      "b04": "#72747E",
      "b05": "#72747E",
      "b06": "#1e2027",
      "elevation": "#282A32",
      "f01": "#FFFFFF",
      "f02": "#72747E",
      "f03": "#898B94",
      "f04": "#A0A2A9",
      "f05": "#BCBDC2",
      "f06": "#FFFFFF",
      "f07": "#1e2027",
      "f11": "#FFFFFF",
      "l01": "#1e2027",
      "l02": "#383A43",
      "l03": "#54565E",
      "l04": "#A0A2A9",
      "transparent": "transparent"
    },
    "presence": {
      "available": "#3D9A4A",
      "busy": "#DD6057",
      "invisible": "#72747E"
    },
    "subAction": "#729AFF",
    "tab": {
      "default": "#FFFFFF",
      "selected": "#729AFF"
    },
    "umi": {
      "bg": "#72747E",
      "mentioned": "#FF8800",
      "text": "#FFFFFF"
    },
    "vDanger": {
      "f01": "#DD6057"
    },
    "vDisabled": {
      "f01": "#54565E"
    },
    "vNeutral": {
      "b01": "#1e2027",
      "b02": "#282A32",
      "b03": "#30323A",
      "b04": "#383A43",
      "f01": "#FFFFFF"
    }
  },
  "props": {},
  "shadows": [
    "none",
    "0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12)",
    "0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12)",
    "0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)"
  ],
  "typography": {
    "htmlFontSize": 16,
    "fontFamily": "Lato, Helvetica, Arial, sans-serif",
    "fontSize": 14,
    "fontWeightLight": 300,
    "fontWeightRegular": 400,
    "fontWeightMedium": 500,
    "fontWeightBold": 700,
    "h1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 300,
      "fontSize": "6rem",
      "lineHeight": 1.167
    },
    "h2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 300,
      "fontSize": "3.75rem",
      "lineHeight": 1.2
    },
    "h3": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "3rem",
      "lineHeight": 1.167
    },
    "h4": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "2.125rem",
      "lineHeight": 1.235
    },
    "h5": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "1.5rem",
      "lineHeight": 1.334
    },
    "h6": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 500,
      "fontSize": "1.25rem",
      "lineHeight": 1.6
    },
    "subtitle1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "1rem",
      "lineHeight": 1.75
    },
    "subtitle2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 500,
      "fontSize": "0.875rem",
      "lineHeight": 1.57
    },
    "body1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.875rem",
      "lineHeight": "20px"
    },
    "body2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 700,
      "fontSize": "0.875rem",
      "lineHeight": "20px"
    },
    "button": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 700,
      "fontSize": "0.9375rem",
      "lineHeight": "20px",
      "textTransform": "none"
    },
    "caption": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.75rem",
      "lineHeight": 1.66
    },
    "overline": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.75rem",
      "lineHeight": 2.66,
      "textTransform": "uppercase"
    },
    "caption1": {
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "lineHeight": "16px"
    },
    "caption2": {
      "fontSize": "0.75rem",
      "fontWeight": 700,
      "lineHeight": "16px"
    },
    "codeFontFamily": "Courier",
    "display1": {
      "fontSize": "2.125rem",
      "fontWeight": 400,
      "lineHeight": "40px"
    },
    "display2": {
      "fontSize": "2.8125rem",
      "fontWeight": 400,
      "lineHeight": "56px"
    },
    "display3": {
      "fontSize": "3.5rem",
      "fontWeight": 700,
      "lineHeight": "72px"
    },
    "display4": {
      "fontSize": "6rem",
      "fontWeight": 700,
      "lineHeight": "112px"
    },
    "headline1": {
      "fontSize": "1.5rem",
      "fontWeight": 400,
      "lineHeight": "32px"
    },
    "headline2": {
      "fontSize": "1.5rem",
      "fontWeight": 700,
      "lineHeight": "32px"
    },
    "subheading1": {
      "fontSize": "1rem",
      "fontWeight": 400,
      "lineHeight": "24px"
    },
    "subheading2": {
      "fontSize": "1rem",
      "fontWeight": 700,
      "lineHeight": "24px"
    },
    "title1": {
      "fontSize": "1.25rem",
      "fontWeight": 400,
      "lineHeight": "28px"
    },
    "title2": {
      "fontSize": "1.25rem",
      "fontWeight": 700,
      "lineHeight": "28px"
    }
  },
  "shape": {
    "borderRadius": 4
  },
  "transitions": {
    "easing": {
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)"
    },
    "duration": {
      "shortest": 150,
      "shorter": 200,
      "short": 250,
      "standard": 300,
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195
    }
  },
  "zIndex": {
    "mobileStepper": 1000,
    "speedDial": 1050,
    "appBar": 1100,
    "drawer": 1200,
    "modal": 1300,
    "snackbar": 1400,
    "tooltip": 1500
  },
  "opacity": {
    "12": 0.12,
    "16": 0.16,
    "24": 0.24,
    "32": 0.32,
    "40": 0.4,
    "48": 0.48,
    "56": 0.56,
    "64": 0.64,
    "72": 0.72,
    "80": 0.8,
    "88": 0.88,
    "96": 0.96,
    "08": 0.08
  },
  "radius": {
    "circle": "50%",
    "lg": "4px",
    "md": "3px",
    "round": "100vw",
    "sm": "2px",
    "xl": "8px",
    "xxl": "16px",
    "zero": "0px"
  },
  "unit": "4px"
}
    </pre>
  </div>,
  .c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

<h5
    className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="headline1"
  >
    HighContrast Theme
  </h5>,
  <div
    className="MuiBox-root-21 MuiBox-root-22"
  >
    <pre>
      {
  "breakpoints": {
    "keys": [
      "xs",
      "sm",
      "md",
      "lg",
      "xl"
    ],
    "values": {
      "lg": 1280,
      "md": 960,
      "sm": 641,
      "xl": 1920,
      "xs": 0
    }
  },
  "direction": "ltr",
  "mixins": {
    "toolbar": {
      "minHeight": 56,
      "@media (min-width:0px) and (orientation: landscape)": {
        "minHeight": 48
      },
      "@media (min-width:641px)": {
        "minHeight": 64
      }
    }
  },
  "overrides": {
    "MuiPaper": {
      "root": {
        "backgroundColor": "#000000",
        "color": "#FFFFFF"
      },
      "elevation1": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation2": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation3": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation4": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation5": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation6": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation7": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation8": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation9": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation10": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation11": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation12": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation13": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation14": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation15": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation16": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation17": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation18": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation19": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation20": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation21": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation22": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation23": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      },
      "elevation24": {
        "box-shadow": "0 0 0 1px #FFFFFF"
      }
    }
  },
  "palette": {
    "common": {
      "black": "#000",
      "white": "#fff"
    },
    "type": "dark",
    "primary": {
      "main": "#35C6FF",
      "light": "rgb(93, 209, 255)",
      "dark": "rgb(37, 138, 178)",
      "contrastText": "rgba(0, 0, 0, 0.87)"
    },
    "secondary": {
      "main": "#884C12",
      "light": "rgb(159, 111, 65)",
      "dark": "rgb(95, 53, 12)",
      "contrastText": "#fff"
    },
    "error": {
      "main": "#DD6057",
      "light": "rgb(227, 127, 120)",
      "dark": "rgb(154, 67, 60)",
      "contrastText": "#fff"
    },
    "warning": {
      "b01": "#2B2416",
      "b02": "#373D1B",
      "b03": "#FEFF05",
      "f01": "#FEFF05",
      "f02": "#FEFF05",
      "f11": "#FEFF05",
      "main": "#74561D",
      "light": "rgb(143, 119, 74)",
      "dark": "rgb(81, 60, 20)",
      "contrastText": "#fff"
    },
    "info": {
      "main": "#FFFFFF",
      "light": "rgb(255, 255, 255)",
      "dark": "rgb(178, 178, 178)",
      "contrastText": "rgba(0, 0, 0, 0.87)"
    },
    "success": {
      "b01": "#1C281B",
      "b02": "#223221",
      "b03": "#7FFF5D",
      "b04": "#7FFF5D",
      "b05": "#FFFFFF",
      "f01": "#223221",
      "f02": "#7FFF5D",
      "f11": "#7FFF5D",
      "main": "#3D9A4A",
      "light": "rgb(99, 174, 110)",
      "dark": "rgb(42, 107, 51)",
      "contrastText": "#fff"
    },
    "grey": {
      "50": "#fafafa",
      "100": "#f5f5f5",
      "200": "#eeeeee",
      "300": "#e0e0e0",
      "400": "#bdbdbd",
      "500": "#9e9e9e",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
      "A100": "#d5d5d5",
      "A200": "#aaaaaa",
      "A400": "#303030",
      "A700": "#616161"
    },
    "contrastThreshold": 3,
    "tonalOffset": 0.2,
    "text": {
      "primary": "#fff",
      "secondary": "rgba(255, 255, 255, 0.7)",
      "disabled": "rgba(255, 255, 255, 0.5)",
      "hint": "rgba(255, 255, 255, 0.5)",
      "icon": "rgba(255, 255, 255, 0.5)"
    },
    "divider": "rgba(255, 255, 255, 0.12)",
    "background": {
      "paper": "#424242",
      "default": "#303030"
    },
    "action": {
      "active": "#fff",
      "hover": "rgba(255, 255, 255, 0.08)",
      "hoverOpacity": 0.08,
      "selected": "rgba(255, 255, 255, 0.16)",
      "selectedOpacity": 0.16,
      "disabled": "rgba(255, 255, 255, 0.3)",
      "disabledBackground": "rgba(255, 255, 255, 0.12)",
      "disabledOpacity": 0.38,
      "focus": "rgba(255, 255, 255, 0.12)",
      "focusOpacity": 0.12,
      "activatedOpacity": 0.24,
      "grayDark": "#FFFFFF",
      "grayLight": "#FFFFFF",
      "primary": "#35C6FF"
    },
    "avatar": {
      "ash": "#FFFFFF",
      "blueberry": "#AE9CFF",
      "brass": "#EBA800",
      "global": "#84CCFF",
      "gold": "#FEFF05",
      "lake": "#12F7FF",
      "oasis": "#00C5BE",
      "pear": "#7FFF5D",
      "persimmon": "#FF833B",
      "sage": "#42FFA0",
      "tomato": "#FF827A"
    },
    "content": {
      "brand": "#35C6FF"
    },
    "danger": {
      "b01": "#391D19",
      "b02": "#49241F",
      "b03": "#FF827A",
      "b04": "#FF827A",
      "f01": "#49241F",
      "f02": "#FF827A",
      "f11": "#FF827A"
    },
    "dialHeader": {
      "avatarBg": "#84CCFF",
      "avatarIcon": "#FFFFFF",
      "bg": "#000000",
      "focusBorder": "#35C6FF",
      "icon": "#FFFFFF",
      "text": "#FFFFFF",
      "textHint": "#FFFFFF"
    },
    "disabled": {
      "b01": "#4D4D4D",
      "f01": "#000000",
      "f02": "#4D4D4D"
    },
    "header": {
      "bgLeft": "#000000",
      "bgOverlay": "rgba(255,255,255,0.16)",
      "bgOverlayDisabled": "rgba(255,255,255,0.08)",
      "bgRight": "#000000",
      "border": "#FFFFFF",
      "divider": "#FFFFFF",
      "fabBg": "#000000",
      "fabIcon": "#FFFFFF",
      "focusBorder": "#FFFFFF",
      "icon": "#FFFFFF",
      "iconDisabled": "rgba(255,255,255,0.32)",
      "text": "#FFFFFF",
      "textHint": "#FFFFFF"
    },
    "highContrast": "#FFFFFF",
    "highlight": {
      "b01": "#FFFFFF",
      "b02": "#3E2A19",
      "b03": "#884C12",
      "f01": "#FFA43B",
      "f02": "#FFA43B"
    },
    "informative": {
      "b01": "#000000",
      "f01": "#222E49",
      "f02": "#35C6FF"
    },
    "interactive": {
      "b01": "#29334C",
      "b02": "#35C6FF",
      "f01": "#35C6FF"
    },
    "label": {
      "black02": "#FFFFFF",
      "blue01": "#35C6FF",
      "blue02": "#35C6FF",
      "green01": "#7FFF5D",
      "green02": "#7FFF5D",
      "orange01": "#FFA43B",
      "orange02": "#FFA43B",
      "purple01": "#AE9CFF",
      "purple02": "#AE9CFF",
      "red01": "#FF827A",
      "red02": "#FF827A",
      "teal01": "#12F7FF",
      "teal02": "#12F7FF",
      "yellow01": "#FEFF05",
      "yellow02": "#FEFF05"
    },
    "nav": {
      "b01": "#000000",
      "b02": "#000000",
      "bookmark": "#35C6FF",
      "ctlDefault": "#FFFFFF",
      "ctlSelected": "#35C6FF",
      "f01": "#FFFFFF",
      "f02": "#FFFFFF",
      "f03": "#FFFFFF",
      "f04": "#FFFFFF",
      "iconDefault": "#FFFFFF",
      "iconSelected": "#35C6FF",
      "line": "#FFFFFF",
      "mention": "#FFA43B",
      "menuBg": "#35C6FF",
      "menuText": "#000000"
    },
    "neutral": {
      "b01": "#000000",
      "b02": "#000000",
      "b03": "#000000",
      "b04": "#FFFFFF",
      "b05": "#FFFFFF",
      "b06": "#000000",
      "elevation": "#000000",
      "f01": "#000000",
      "f02": "#808080",
      "f03": "#FFFFFF",
      "f04": "#FFFFFF",
      "f05": "#FFFFFF",
      "f06": "#FFFFFF",
      "f07": "#000000",
      "f11": "#FFFFFF",
      "l01": "#000000",
      "l02": "#FFFFFF",
      "l03": "#FFFFFF",
      "l04": "#FFFFFF",
      "transparent": "transparent"
    },
    "presence": {
      "available": "#7FFF5D",
      "busy": "#FF827A",
      "invisible": "#808080"
    },
    "subAction": "#35C6FF",
    "tab": {
      "default": "#FFFFFF",
      "selected": "#35C6FF"
    },
    "umi": {
      "bg": "#FFFFFF",
      "mentioned": "#FFA43B",
      "text": "#000000"
    },
    "vDanger": {
      "f01": "#DD6057"
    },
    "vDisabled": {
      "f01": "#54565E"
    },
    "vNeutral": {
      "b01": "#1e2027",
      "b02": "#282A32",
      "b03": "#30323A",
      "b04": "#383A43",
      "f01": "#FFFFFF"
    }
  },
  "props": {},
  "shadows": [
    "none",
    "0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12)",
    "0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12)",
    "0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)"
  ],
  "typography": {
    "htmlFontSize": 16,
    "fontFamily": "Lato, Helvetica, Arial, sans-serif",
    "fontSize": 14,
    "fontWeightLight": 300,
    "fontWeightRegular": 400,
    "fontWeightMedium": 500,
    "fontWeightBold": 700,
    "h1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 300,
      "fontSize": "6rem",
      "lineHeight": 1.167
    },
    "h2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 300,
      "fontSize": "3.75rem",
      "lineHeight": 1.2
    },
    "h3": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "3rem",
      "lineHeight": 1.167
    },
    "h4": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "2.125rem",
      "lineHeight": 1.235
    },
    "h5": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "1.5rem",
      "lineHeight": 1.334
    },
    "h6": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 500,
      "fontSize": "1.25rem",
      "lineHeight": 1.6
    },
    "subtitle1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "1rem",
      "lineHeight": 1.75
    },
    "subtitle2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 500,
      "fontSize": "0.875rem",
      "lineHeight": 1.57
    },
    "body1": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.875rem",
      "lineHeight": "20px"
    },
    "body2": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 700,
      "fontSize": "0.875rem",
      "lineHeight": "20px"
    },
    "button": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 700,
      "fontSize": "0.9375rem",
      "lineHeight": "20px",
      "textTransform": "none"
    },
    "caption": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.75rem",
      "lineHeight": 1.66
    },
    "overline": {
      "fontFamily": "Lato, Helvetica, Arial, sans-serif",
      "fontWeight": 400,
      "fontSize": "0.75rem",
      "lineHeight": 2.66,
      "textTransform": "uppercase"
    },
    "caption1": {
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "lineHeight": "16px"
    },
    "caption2": {
      "fontSize": "0.75rem",
      "fontWeight": 700,
      "lineHeight": "16px"
    },
    "codeFontFamily": "Courier",
    "display1": {
      "fontSize": "2.125rem",
      "fontWeight": 400,
      "lineHeight": "40px"
    },
    "display2": {
      "fontSize": "2.8125rem",
      "fontWeight": 400,
      "lineHeight": "56px"
    },
    "display3": {
      "fontSize": "3.5rem",
      "fontWeight": 700,
      "lineHeight": "72px"
    },
    "display4": {
      "fontSize": "6rem",
      "fontWeight": 700,
      "lineHeight": "112px"
    },
    "headline1": {
      "fontSize": "1.5rem",
      "fontWeight": 400,
      "lineHeight": "32px"
    },
    "headline2": {
      "fontSize": "1.5rem",
      "fontWeight": 700,
      "lineHeight": "32px"
    },
    "subheading1": {
      "fontSize": "1rem",
      "fontWeight": 400,
      "lineHeight": "24px"
    },
    "subheading2": {
      "fontSize": "1rem",
      "fontWeight": 700,
      "lineHeight": "24px"
    },
    "title1": {
      "fontSize": "1.25rem",
      "fontWeight": 400,
      "lineHeight": "28px"
    },
    "title2": {
      "fontSize": "1.25rem",
      "fontWeight": 700,
      "lineHeight": "28px"
    }
  },
  "shape": {
    "borderRadius": 4
  },
  "transitions": {
    "easing": {
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)"
    },
    "duration": {
      "shortest": 150,
      "shorter": 200,
      "short": 250,
      "standard": 300,
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195
    }
  },
  "zIndex": {
    "mobileStepper": 1000,
    "speedDial": 1050,
    "appBar": 1100,
    "drawer": 1200,
    "modal": 1300,
    "snackbar": 1400,
    "tooltip": 1500
  },
  "opacity": {
    "12": 0.12,
    "16": 0.16,
    "24": 0.24,
    "32": 0.32,
    "40": 0.4,
    "48": 0.48,
    "56": 0.56,
    "64": 0.64,
    "72": 0.72,
    "80": 0.8,
    "88": 0.88,
    "96": 0.96,
    "08": 0.08
  },
  "radius": {
    "circle": "50%",
    "lg": "4px",
    "md": "3px",
    "round": "100vw",
    "sm": "2px",
    "xl": "8px",
    "xxl": "16px",
    "zero": "0px"
  },
  "unit": "4px"
}
    </pre>
  </div>,
]
`;
